EX-2415: fix broken news on smaller device (#1962)

--- a/modules/fresh-tab-frontend/app/styles/freshtab.scss
+++ b/modules/fresh-tab-frontend/app/styles/freshtab.scss
@@ -678,7 +678,7 @@ a:hover, a:active, a:focus {
   }
 
   #freshTabPage #newsContainer .allNews li{
-    float: none;
+    float: left;
     width: 100%;
   }
 
